// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calculateOrderItemPriceRounded 1`] = `
Object {
  "currency": "BATKA",
  "pricePerUnit": 1.11,
  "priceSum": 11.11,
  "tax": 10,
  "taxSum": 1.01,
}
`;

exports[`calculateOrderItemSumPriceRounded 1`] = `
Object {
  "currency": "BATKA",
  "pricePerUnit": 3.11,
  "priceSum": 31.12,
  "tax": 10,
  "taxSum": 2.83,
}
`;
